# desktop-1

./: .gitignore  CHANGELOG.md  README.md  data_anno.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: admin_auth_admin_api_plugin.rs  admin_auth_api_plugin.rs  client_cfg_admin_api_plugin.rs  client_cfg_api_plugin.rs  dev_container_admin_api_plugin.rs  dev_container_api_plugin.rs  events_decode.rs  fs_api_plugin.rs  git_widget_plugin.rs  idea_store_api_plugin.rs  image_utils.rs  keyword_admin_api_plugin.rs  local_repo_plugin.rs  main.rs  my_updater.rs  notice_decode.rs  shell_plugin.rs  user_admin_api_plugin.rs  user_api_plugin.rs  user_app_api_plugin.rs  user_idea_api_plugin.rs  user_notice_api_plugin.rs  user_resume_admin_api_plugin.rs  user_resume_api_plugin.rs
src-tauri/src/group_api/: group_admin_api_plugin.rs  group_api_plugin.rs  group_member_api_plugin.rs  group_post_admin_api_plugin.rs  group_post_api_plugin.rs  mod.rs
src-tauri/src/helper/: http.rs  mod.rs
src-tauri/src/local_api/: entry_api.rs  event_api.rs  issue_api.rs  mod.rs  notice.rs  project_api.rs  project_code_api.rs  server.rs
src-tauri/src/minapp_api/: desktop_link_plugin.rs  min_app_fs_plugin.rs  min_app_grpc_plugin.rs  min_app_plugin.rs  min_app_shell_plugin.rs  min_app_store_plugin.rs  mod.rs
src-tauri/src/org_api/: mod.rs  org_admin_api_plugin.rs  org_api_plugin.rs  org_forum_api_plugin.rs  org_member_admin_api_plugin.rs  org_member_api_plugin.rs  org_okr_api_plugin.rs  org_report_api_plugin.rs
src-tauri/src/project_cloud_api/: k8s_proxy_api_plugin.rs  mod.rs  net_proxy_api_plugin.rs  swarm_proxy_api_plugin.rs  trace_proxy_api_plugin.rs
src-tauri/src/project_comm_api/: events_admin_api_plugin.rs  events_api_plugin.rs  mod.rs  project_admin_api_plugin.rs  project_api_plugin.rs  project_member_admin_api_plugin.rs  project_member_api_plugin.rs
src-tauri/src/project_content_api/: api_collection_api_plugin.rs  data_anno_project_api_plugin.rs  data_anno_task_api_plugin.rs  http_custom_api_plugin.rs  mod.rs  pages_plugin.rs  project_board_api_plugin.rs  project_doc_api_plugin.rs  project_entry_api_plugin.rs  project_sprit_api_plugin.rs
src-tauri/src/project_mgr_api/: mod.rs  project_alarm_api_plugin.rs  project_issue_api_plugin.rs  project_requirement_api_plugin.rs  project_testcase_api_plugin.rs
src-tauri/src/project_misc_api/: events_subscribe_api_plugin.rs  mod.rs  (+11 more)
(+781 files in other folders)
