[package]
authors = ["panleiming"]
default-run = "linksaas"
description = ""
edition = "2021"
license = "GPL3.0"
name = "linksaas"
repository = ""
rust-version = "1.57"
version = "0.8.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.4", features = [] }

[dependencies]
async-trait = "0.1.26"
async_zip = {version = "0.0.11", features = ["full"] }
base64 = "0.13.0"
dirs = "4.0.0"
futures = "0.3"
futures-util = "0.3.21"
html-escape = "0.2.13"
http = "0.2.8"
hyper = {version = "0.14", features = ["full"] }
image = "0.24.1"
libaes = "0.6.5"
local_api_rust = {git = "https://atomgit.com/openlinksaas/local-api-rust.git", tag = "0.1.21"}
mktemp = "0.5.0"
prost = "0.9.0"
proto_gen_rust = {git = "https://atomgit.com/openlinksaas/proto-gen-rust.git", tag = "1.0.29"}
rand = "0.8.5"
regex = "1.8.4"
reqwest = {version = "0.11.12", features = ["blocking"] }
rsa = "0.8.1"
rumqttc = "0.11.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.19"
signature = "2.2.0"
sled = "0.34.7"
ssh-key = {version = "0.6.5", features = ["alloc", "rsa", "dsa", "p256", "p384"] }
substring = "1.4.5"
swagger = {version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
tauri = {git = "https://atomgit.com/openlinksaas/tauri.git", branch = "local_ipc_v4", features = [ "updater", "path-all", "fs-all",
  "clipboard-all",
  "devtools",
  "dialog-all",
  "http-all",
  "http-multipart",
  "macos-private-api",
  "notification-all",
  "os-all",
  "process-all",
  "process-command-api",
  "protocol-all",
  "shell-open",
  "shell-sidecar",
  "system-tray",
  "window-all",
  "windows7-compat",
] }
tokio = {version = "1.17.0", feature = ["time", "macros"] }
tokio-stream = "0.1.6"
tonic = "0.6.2"
url = "2.2.2"
uuid = {version = "0.8", features = ["serde", "v4"] }
walkdir = "2.3.2"
base64ct = "1.6.0"
random-string = "1.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "tauri/updater"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
